--- a/project/html/index.html
+++ b/project/html/index.html
@@ -6,6 +6,7 @@
     <link type="text/css" rel="stylesheet" href="css/style.css"/>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/list.js"></script>
     <script type="text/javascript" src="js/calendar.js"></script>
     <script type="text/javascript" src="js/lesson.js"></script>
 </head>
