--- a/project/html/index.html
+++ b/project/html/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
 <div class="header">
-  <a href="#list">今日</a>
   <a href="#calendar">カレンダー</a>
+  <a href="#list">リスト</a>
+  <a href="#task">タスク</a>
 </div>
 <div id="content"></div>
 </body>
