タスクリスト

--- a/project/html/index.html
+++ b/project/html/index.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript" src="js/list.js"></script>
   <script type="text/javascript" src="js/calendar.js"></script>
+  <script type="text/javascript" src="js/task.js"></script>
   <script type="text/javascript" src="js/lesson.js"></script>
 </head>
 <body>
