タスクリストをリストと同じソースに

--- a/project/html/index.html
+++ b/project/html/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>授業スケジュール</title>
   <link type="text/css" rel="stylesheet" href="css/style.css"/>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
-  <script type="text/javascript" src="js/list.js"></script>
   <script type="text/javascript" src="js/calendar.js"></script>
-  <script type="text/javascript" src="js/task.js"></script>
+  <script type="text/javascript" src="js/list.js"></script>
   <script type="text/javascript" src="js/lesson.js"></script>
 </head>
 <body>
