再読み込み対応とハッシュジャンプ整理

--- a/project/html/index.html
+++ b/project/html/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <div class="header">
+  <a href="#reload" id="reload">再読み込み</a>
   <a href="#calendar">カレンダー</a>
   <a href="#list">リスト</a>
   <a href="#task">タスク</a>
